# septem-maria

./: .gitattributes  CMakeLists.txt  README.md  compile_commands.json  justfile  ocean_mesh_gen.md
inc/: camera.h  input.h  ship.h
res/boat/: 12219_boat_v2_L2.mtl  fixed.blend  fixed.blend1  fixed.mtl
src/: camera.c  input.c  main.c  ship.c
